# magic-crystal

./: .gitignore  .lock-status  BIBLE.md  CLAUDE.md  CREATE.md  Cargo.toml  DESIGN-BIBLE.md  DREAMFORGE.md  ENTROPY.md  GEOMETRY.md  GRIMOIRE.md  HANDOFF.md  LASHES.md  NARUKO.md  NEURAL.md  NIGHTLOG.md  NIGHTRUN.md  PHYSICS.md  RAIN.md  README.md  RENDER.md  VISIONFLOW.md
.githooks/: pre-push
ane-spike/: .gitignore  bench.swift  bench2.swift  build_fixed.py  golden.json  parity.py  plan.swift  plan_ane.swift  ref_gen.rs
features/: CLIENT.md
hymns/: rite-02-first-light-invocation.md  rite-02-first-light.md  rite-03-the-great-chain.md  rite-04-the-pleroma.md  zauberpolizei-tales-of-the-magic-crystal.md
proof/: 2026-07-18-lod-after-perf-audit-final.txt  2026-07-18-lod-after-perf-audit.txt  2026-07-18-silicon-race-2-baselines-repeat-2.txt  2026-07-18-silicon-race-2-baselines-repeat-3.txt  2026-07-18-silicon-race-2-baselines.txt  2026-07-18-silicon-race-2-metal4-door.txt  2026-07-18-silicon-race-2-metal4-negative.txt  2026-07-18-silicon-race-2-package-wall.txt  PLAY-report.md  building-push-mid-collapse.json  building-push-pre-push.json  building-push-settled.json  fluid-door-mid-splash.json  fluid-door-pre-burst.json  fluid-door-settled.json  present-conform-adversary.md
reference/: lore-2026-07-03-three-pascals.md
research/: beamng-whitepaper-recon.md  evans-siggraph2015-numbers.md  gdc-architecture-of-dreams-recon.md  mythology-harvest.md
scratch/: probe.rs  v6-gated-c99e5da.bin.bak  v7-autopsy.md  v7-resume-notes.md
tools/: lane-sweep.sh  wilde-jagd-gate.sh
(+97 files in other folders)
