[workspace]
members = ["crates/crystal", "packages/aether", "packages/elements", "packages/homunculus", "packages/jormungandr", "packages/kami", "packages/oracle", "packages/pleroma", "packages/scrying-glass", "packages/seed", "packages/steiner", "packages/transmute", "packages/vessel", "packages/wired"]
resolver = "2"
