[workspace]
members = ["crates/crystal", "packages/aether", "packages/char-editor", "packages/elements", "packages/fracture", "packages/homunculus", "packages/jormungandr", "packages/kami", "packages/oracle", "packages/pleroma", "packages/sama", "packages/scrying-glass", "packages/seed", "packages/steiner", "packages/transmute", "packages/vessel", "packages/wired"]
resolver = "2"
